--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -132,8 +132,7 @@ footer {
 }
 
 .gallery-item {
-    position: relative;
-    width: 350px;
+    flex: 0 1 calc(33.33% - 40px); 
     background-color: #fff;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
